--- a/myclub_website/events/templates/events/search_events.html
+++ b/myclub_website/events/templates/events/search_events.html
@@ -1,22 +1,27 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
+<div class="card">
+  <div class="card-header">
+    {% if searched %}
+		You Searched For {{ searched }}
+	{% else %}
+		Search Events...
+	{% endif %}
+  </div>
+  <div class="card-body">
+      <form  role="search" method=POST action="{% url 'search_events' %}">
+        {% csrf_token %}
+        <input class="form-control me-2" type="search" placeholder="Search Venues" aria-label="Search" name="searched">
+        <br/>
+        <button class="btn btn-outline-secondary" type="submit">Search</button>
+      </form>
+  </div>
+</div>
 
-	<center>		
-	<h1>Hello {{ name }}! Events For {{ month }} {{ year }}</h1>
+		<br/>
+		{% for event in events %}
 
-	As of {{ time }}
-	<br/><br/>
-
-	{{ cal|safe }}
-	<br/><br/>
-	</center>
-	
-	<h3>Events This Month...</h3>
-
-	{% if event_list %}
-
-		{% for event in event_list %}
 			<div class="card">
 			  <div class="card-header">
 			    {{ event }}
@@ -46,19 +51,15 @@
 					  </div>
 					{% endif %}
 			  {% endif %}  
-			</div><br/>
+			</div>
+
+			</br>
 
 		{% endfor %}
 
-	{% else %}
+	
 
-	Sorry... There are no events this month...
 
-	{% endif %}
 
-	<center>
-	<br/><br/><br/><br/>
-	Copyright (c) {{ current_year }}
-	</center>
 
 {% endblock %}
