--- a/myclub_website/events/templates/events/show_venue.html
+++ b/myclub_website/events/templates/events/show_venue.html
@@ -8,7 +8,7 @@
 
 	<div class="card">
 	  <div class="card-header">
-	    Venue
+	    Venue - test
 	  </div>
 	  <div class="card-body">
 	    <h5 class="card-title">{{ venue }}</h5>
@@ -18,7 +18,9 @@
 			<li>{{ venue.zip_code }}</li>
 			<li>{{ venue.phone }}</li>
 			<li>{{ venue.email_address }}</li>	
-			<li><a href="{{ venue.web }}">{{ venue.web }}</a></li> 
+			<li><a href="{{ venue.web }}">{{ venue.web }}</a></li>
+			<li>Owner: {{ venue_owner }} </li>
+			<li>Owner's Email: {{ venue_owner.email }} </li>			
 		  </ul>	 	
 	    </p>
 	  </div>
