--- a/myclub_website/events/templates/events/event_list.html
+++ b/myclub_website/events/templates/events/event_list.html
@@ -15,6 +15,8 @@
     <h5 class="card-title">Venue: {{ event.venue }}</h5>
     <p class="card-text">
 		<strong>Date:</strong> {{ event.event_date }}<br/>
+		<strong>Days Till Event:</strong> {{ event.Days_till }}<br/>
+		<strong>Occured?</strong> {{ event.Is_Past }}<br/>
 		<strong>Venue Website:</strong> {{ event.venue.web }}<br/>
 		<strong>Manager:</strong> {{ event.manager }}<br/>
 		<strong>Description:</strong> {{ event.description }}<br/>
