--- a/myclub_website/events/templates/events/show_venue.html
+++ b/myclub_website/events/templates/events/show_venue.html
@@ -21,7 +21,11 @@
 			<li><a href="{{ venue.web }}">{{ venue.web }}</a></li>
 			<li>Owner: {{ venue_owner }} </li>
 			<li>Owner's Email: {{ venue_owner.email }} </li>			
-		  </ul>	 	
+		  </ul>
+		  <br/>
+		  {% if venue.venue_image %}
+		  	<img src="{{ venue.venue_image.url }}" width="450">
+		  {% endif %}	 	
 	    </p>
 	  </div>
 	</div>
